<resources>
    <string name="app_name">Developer Tools</string>
    <string name="title_tool_detail">Tool Detail</string>
    <string name="screen_dimensions">Screen dimensions</string>
    <string name="dalvik_explorer">Dalvik Explorer</string>
    <string name="alogcat">aLogcat</string>
    <string name="manifestviewer">Manifestviewer</string>
    <string name="developer_options">Developer options</string>
    <string name="developer_options_short">Dev opt</string>
    <string name="apps">Apps</string>
    <string name="resource_qualifiers">Resource qualifiers</string>
    <string name="network">Network</string>
    <string name="system_features">System features</string>
    <string name="third_party_apps">Third party apps</string>
    <string name="settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="app_ops">Permission manager</string>
    <string name="install_app">Install %1$s</string>
    <string name="about_dalvik_explorer">Dalvik Explorer is an excellent app by Elliott Hughes that displays Java system properties, environment variables, and more.\n\nYou can download it from Play Store.</string>
    <string name="about_alogcat">aLogcat is a great Android system log file reader by Jeffrey Blattman.\n\nYou can download it from Play Store.\n\nPlease consider his donate version if you find it useful.</string>
    <string name="about_manifestviewer">ManifestViewer is a great way to get information about installed apps\' AndroidManifest.xml, including intent filters and permissions.\n\nThe app is created by susatthi and you can download it from Play Store.</string>
    <string name="about_clean_status_bar">Clean Status Bar is *the* app to use when taking screenshots of your apps.\n\nUsing this app you get professional screenshots to use in Play Store and presentations.\n\nThe app is created by Emma Guy. It\'s available as open source and in Play Store.</string>
    <string name="package_name_dalvik_explorer">org.jessies.dalvikexplorer</string>
    <string name="package_name_alogcat">org.jtb.alogcat.donate</string>
    <string name="package_name_alogcat_free">org.jtb.alogcat</string>
    <string name="package_name_manifestviewer">jp.susatthi.ManifestViewer</string>
    <string name="package_name_clean_status_bar">com.emmaguy.cleanstatusbar</string>
    <string name="fallback_no_qualifier">Fallback (no qualifier)</string>
    <string name="qualifier_screen_size">@string/fallback_no_qualifier</string>
    <string name="screen_size">Screen size</string>
    <string name="screen_aspect">Screen aspect</string>
    <string name="qualifier_screen_aspect">@string/fallback_no_qualifier</string>
    <string name="api_level_4">API level 4</string>
    <string name="api_level_1">API level 1</string>
    <string name="screen_orientation">Screen orientation</string>
    <string name="qualifier_screen_orientation">@string/fallback_no_qualifier</string>
    <string name="wide_color_gamut">Wide Color Gamut</string>
    <string name="qualifier_wide_color_gamut">@string/fallback_no_qualifier</string>
    <string name="hdr">High Dynamic Range (HDR)</string>
    <string name="qualifier_hdr">@string/fallback_no_qualifier</string>
    <string name="api_level_17">API level 17</string>
    <string name="layout_direction">Layout direction</string>
    <string name="qualifier_layout_direction">@string/fallback_no_qualifier</string>
    <string name="api_level_8">API level 8</string>
    <string name="ui_mode">UI mode</string>
    <string name="qualifier_ui_mode">@string/fallback_no_qualifier</string>
    <string name="night_mode">Night mode</string>
    <string name="qualifier_night_mode">@string/fallback_no_qualifier</string>
    <string name="screen_pixel_density">Screen pixel density (dpi)</string>
    <string name="qualifier_screen_pixel_density">@string/fallback_no_qualifier</string>
    <string name="touchscreen_type">Touchscreen type</string>
    <string name="qualifier_touchscreen_type">@string/fallback_no_qualifier</string>
    <string name="keyboard_availability">Keyboard availability</string>
    <string name="qualifier_keyboard_availability">@string/fallback_no_qualifier</string>
    <string name="primary_text_input_method">Primary text input method</string>
    <string name="qualifier_primary_text_input_method">@string/fallback_no_qualifier</string>
    <string name="qualifier_navigation_key_availability">@string/fallback_no_qualifier</string>
    <string name="navigation_key_availability">Navigation key availability</string>
    <string name="qualifier_primary_nontouch_navigation_method">@string/fallback_no_qualifier</string>
    <string name="primary_nontouch_navigation_method">Primary non-touch navigation method</string>
    <string name="platform_version">Platform version (API level)</string>
    <string name="qualifier_platform_version">@string/fallback_no_qualifier</string>
    <string name="qualifier_round_screen">@string/fallback_no_qualifier</string>
    <string name="language_and_region">Language and region</string>
    <string name="mcc_and_mnc">MCC and MNC</string>
    <string name="collapse_view">Collapse view</string>
    <string name="expand_view">Expand view</string>
    <string name="share_configuration">Share configuration</string>
    <string name="smallestWidth">smallestWidth</string>
    <string name="api_level_13">API level 13</string>
    <string name="available_width">Available width</string>
    <string name="available_height">Available height</string>
    <string name="api_level_23">API level 23</string>
    <string name="round_screen">Round screen</string>
    <string name="about_app">About app</string>
    <string name="clean_status_bar">Clean Status Bar</string>
    <string name="api_level_26">API level 26</string>
</resources>
